Update styling to avoid stretched images on <625px screens

--- a/css/canvas-text-boxes.css
+++ b/css/canvas-text-boxes.css
@@ -64,7 +64,6 @@
     right: 0;
     bottom: 0;
     top: unset;
-    position: relative;
     margin: -30px 8px 8px;
   }
 
@@ -72,6 +71,6 @@
   .text-overlay-preview{
     padding: 5px 10px 20px 50px;
     margin: 0;
-    font-size: 19px;
+    font-size: 16px;
   }
 }
